# SimplestNvidiaCUDACompilerOnWindowns10

./: README.md
.github/workflows/: nvcc.yml  simplest.yml
Actions/CLEXE/: CMakeLists.txt  simplest.ps1
Actions/NVCC/: CMakeLists.txt  dowloading.ps1  simplest.cu  simplest.ps1
